--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
 	"php": ">=7.1.0",
 	"ext-curl": "*",
 	"ext-fileinfo": "*",
-	"ext-json": "*"
+	"ext-json": "*",
+	"ext-exif": "*",
+	"ext-iconv": "*",
+	"ext-imagick": "*",
   },
   "require-dev": {
 	"phpunit/phpunit": "~7.0|~8.0",
@@ -33,7 +36,7 @@
 	  "": ""
 	},
 	"files": [
-        "src/helper.php"
+	  "src/helper.php"
 	]
   },
   "config": {
