mark engine init mod

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"markengine"
   ],
   "type": "library",
-  "license": "MulanPSL-2.0",
+  "license": "MIT",
   "homepage": "https://mark.tianfu.ink",
   "authors": [
 	{
@@ -21,7 +21,7 @@
 	"ext-json": "*",
 	"ext-exif": "*",
 	"ext-iconv": "*",
-	"ext-imagick": "*",
+	"ext-imagick": "*"
   },
   "require-dev": {
 	"phpunit/phpunit": "~7.0|~8.0",
