--- a/composer.json
+++ b/composer.json
@@ -2,52 +2,50 @@
   "name": "tianfuunion/mark-engine",
   "description": "The Tianfu Union Mark Engine.",
   "keywords": [
-	"tianfuunion",
-	"markengine"
+    "tianfuunion",
+    "markengine"
   ],
   "type": "library",
   "license": "MIT",
   "homepage": "https://mark.tianfu.ink",
   "authors": [
-	{
-	  "name": "Mark Yount",
-	  "email": "mark@tianfuunion.cn"
-	}
+    {
+      "name": "Mark Yount",
+      "email": "mark@tianfuunion.cn"
+    }
   ],
   "require": {
-	"php": ">=7.1.0",
-	"ext-curl": "*",
-	"ext-fileinfo": "*",
-	"ext-json": "*",
-	"ext-exif": "*",
-	"ext-iconv": "*",
-	"ext-imagick": "*"
+    "php": ">=7.1.0",
+    "ext-curl": "*",
+    "ext-fileinfo": "*",
+    "ext-json": "*",
+    "ext-iconv": "*"
   },
   "require-dev": {
-	"phpunit/phpunit": "~7.0|~8.0",
-	"php-coveralls/php-coveralls": "^2.2",
-	"phpstan/phpstan": "^0.12"
+    "phpunit/phpunit": "~7.0|~8.0",
+    "php-coveralls/php-coveralls": "^2.2",
+    "phpstan/phpstan": "^0.12"
   },
   "autoload": {
-	"psr-4": {
-	  "Mark\\": "src"
-	},
-	"psr-0": {
-	  "": ""
-	},
-	"files": [
-	  "src/helper.php"
-	]
+    "psr-4": {
+      "mark\\": "src"
+    },
+    "psr-0": {
+      "": ""
+    },
+    "files": [
+      "src/helper.php"
+    ]
   },
   "config": {
-	"sort-packages": true
+    "sort-packages": true
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "repositories": {
-	"packagist": {
-	  "type": "composer",
-	  "url": "https://mirrors.aliyun.com/composer/"
-	}
+    "packagist": {
+      "type": "composer",
+      "url": "https://mirrors.aliyun.com/composer/"
+    }
   }
 }
