修复助手函数

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
   ],
   "require": {
     "php": ">=7.1.0",
+    "psr/log": "~1.0",
+    "psr/container": "~1.0",
+    "psr/simple-cache": "^1.0",
     "ext-curl": "*",
     "ext-fileinfo": "*",
     "ext-json": "*",
