--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,7 @@
     "php": ">=7.1.0",
     "psr/log": "~1.0",
     "psr/container": "~1.0",
-    "psr/simple-cache": "^1.0",
-    "ext-curl": "*",
-    "ext-fileinfo": "*",
-    "ext-json": "*",
-    "ext-iconv": "*"
+    "psr/simple-cache": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0|~8.0",
