--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   ],
   "type": "library",
   "license": "MIT",
-  "homepage": "https://mark.tianfu.ink",
+  "homepage": "http://mark.tianfu.ink",
   "authors": [
     {
       "name": "Mark Young",
