--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,11 @@
     "php": ">=7.1.0",
     "psr/log": "~1.0",
     "psr/container": "~1.0",
-    "psr/simple-cache": "^1.0"
+    "psr/simple-cache": "^1.0",
+    "ext-gd": "*",
+    "ext-exif": "*",
+    "ext-json": "*",
+    "ext-imagick": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0|~8.0",
